fix: add css rule to align roles left (#494)

--- a/src/components/styles/_theme-overrides.scss
+++ b/src/components/styles/_theme-overrides.scss
@@ -2192,6 +2192,7 @@ p.MuiTypography-root.MuiTypography-body3.description,
   /* For WebKit browsers */
   width: stretch;
   /* Standardized version */
+  text-align: left;
 
   .reference-container {
     display: hidden;
